2003-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileWrapper.m: Tidy initialisation and fix leak in
	dealloc.
	* Source/NSTextAttachment.m: ditto.
	* Source/NSGraphicsContext.m: Memory leak fixes (suggested by Andrew
	Ruder) and initialisation tidyups.
	* Source/NSInputManager.m: ditto
	* Source/NSOpenPanel.m: ditto


2003-07-19  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile: Build Documentation if doc=yes (yes by default).

	* Tools/gsnd/GNUmakefile.postamble: Linke in pthreads if not
	already linked in (non-mingw targets only).
	* Tools/gsnd/portaudio/pa_unix_oss/pa_unix_oss.c: On OpenBSD
	include soundcard.h.

	* Panels/English.proj: Replace GSPageLayout.gorm and 
	GSPrintPanel.gorm with updated GOrm dirs. Make Options button 
	non-continuous.
	* Panels/GNUmakefile.postamble (after-install): Install the
	gorm dirs.

2003-07-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m
	Added methods [init], [objectValue], [setObjectValue:],
	[setImage:]. In [initTextCell:pullsDown:] create the menu first,
	so that the first item gets entered to it. In [setPullsDown:] and
	[setAltersStateOfSelectedItem] set the values that depend on these
	flags. In [insertItemWithTitle:atIndex:] remove duplicates. 
	[selectItem:] the used image now depends on the arrow
	position. Removed [drawWithFrame:inView:] and rewrote
	[drawInteriorWithFrame:inView:].
	
2003-07-18  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSControl.h
	* Source/NSControl.m
	New MacOSX methods [formatter], [setFormatter:],
	[attributedStringValue], [setAttributedStringValue:].
	
2003-07-16  Adam Fedor  <fedor@gnu.org>

	* Documentation/Gui/LanguageSetup.gsdoc: Updated with changes from
	Yen-Ju Chen and (Kazunobu Kuriyama.

2003-07-16  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/rtfGrammer.y
	Free the name for RTFOtherStatement.
	* TextConverters/RTF/rtfGrammer.tab.c
	Regenerated.

2003-07-15  Fred Kiefer <FredKiefer@gmx.de>
