@@ -1,3 +1,15 @@
+2003-07-21  Andrew Ruder <aeruder@ksu.edu>
+
+	* Source/GSMemoryPanel.m: Add dealloc method
+	* Source/NSOutlineView.m: Efficiency tweak.
+	* Headers/AppKit/NSComboBoxCell.h:Fix misplaced semicolon 
+	* Source/NSSelection.m: Fix memory leak
+	* Source/NSComboBoxCell.m: Fix misplaced semicolon.
+	* Source/NSPageLayout.m: Fix memory leak.
+	* Source/NSMenuView.m: Fix memory leak.
+	* Source/NSToolbar.m: Fix memory leak and tidy
+	* Source/GSServicesManager.m: Clarify retain/release of timer.
+
 2003-07-21  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSFileWrapper.m: Tidy initialisation and fix leak in
